--- a/src/components/sections/section-01.html
+++ b/src/components/sections/section-01.html
@@ -1,5 +1,10 @@
-<table class="w-full">
+<table role="presentation" class="w-full">
   <tr>
-    <td>section-01</td>
+    <td align="left"  class="pt-[20px] pl-[20px] pb-[20px] pr-[20px]">
+      <x-image class="w-[110px] h-[45px]" imgUrl="image-1.png" href="#"  />
+    </td>
+    <td align="left" class="text-md text-primary leading-[16px]">
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </td>
   </tr>
 </table>
