created section 2 with hero-image and cta

--- a/src/components/sections/section-02.html
+++ b/src/components/sections/section-02.html
@@ -1,5 +1,22 @@
 <table class="w-full">
   <tr>
-    <td>section-02</td>
+    <td align="center"  class="pl-[20px] pb-[20px] pr-[20px]">
+      <x-image class="w-[560px]" imgUrl="image-3.png" href="#"  />
+    </td>
+  </tr>
+  <tr>
+    <td align="center" class="pl-[20px] pb-[20px] pr-[20px] font-bold text-[24px] leading-[100%] tracking-[0%] text-center text-[#005555]">
+      Excepteur sint occaecat cupidatat
+    </td>
+  </tr>
+  <tr>
+    <td align="center" class="pl-[40px] pb-[20px] pr-[40px] font-normal text-[16px] leading-[100%] tracking-[0%] text-center text-[#444444]">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+    </td>
+  </tr>
+  <tr>
+    <td align="center" class="pl-[40px] pb-[20px] pr-[40px] font-normal text-[20px] leading-[100%] tracking-[0%] text-center">
+      <x-button bgColor="#008080"  width ="350px" height="46px" href="#" class="rounded-[10px] text-[#ffffff]" >Ut enim ad minim veniam</x-button>
+    </td>
   </tr>
 </table>
