created section 3 with two column layout

--- a/src/components/sections/section-03.html
+++ b/src/components/sections/section-03.html
@@ -1,5 +1,42 @@
-<table class="w-full">
+<table class="w-full" bgColor="#F0F5F5">
   <tr>
-    <td>section-03</td>
+    <td align="center" class="pl-[20px] pr-[20px] pt-[20px] font-bold text-[24px] leading-[100%] tracking-[0%] text-center text-[#005555]">
+      Sint cupidatat occaecat ut
+    </td>
+  </tr>
+  <tr class="flex flex-row m:flex-col pl-[20px] pb-[20px] pr-[20px] pt-[20px]">
+    <td class="w-full md:w-1/2 p-4 text-center font-bold text-2xl text-[#005555] bg-white">
+      <x-image class="w-[100px] h-[100px] rounded-full" imgUrl="image-5.jpg" href="#"  />
+      <table>
+        <tr>
+          <td align="center" class="pl-[20px] pb-[20px] pr-[20px] pt-[20px] font-bold text-[24px] leading-[100%] tracking-[0%] text-center text-[#005555]">
+            Nisi ut ade
+          </td>
+        </tr>
+        <tr>
+          <td align="center" class="pl-[40px] pb-[20px] pr-[40px] font-normal text-[16px] leading-[100%] tracking-[0%] text-center text-[#444444]">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.<sup>1</sup>          
+          </td>
+        </tr>
+      </table>
+    </td>
+    <td class="w-0px p-3 text-center font-bold text-[#005555]">
+
+    </td>
+    <td class="w-full md:w-1/2 p-4 text-center font-bold text-2xl text-[#005555] bg-white">
+      <x-image class="w-[100px] h-[100px] rounded-full" imgUrl="image-5.jpg" href="#"  />
+      <table>
+        <tr>
+          <td align="center" class="pl-[20px] pb-[20px] pr-[20px] pt-[20px] font-bold text-[24px] leading-[100%] tracking-[0%] text-center text-[#005555]">
+            Duis aute irure
+          </td>
+        </tr>
+        <tr>
+          <td align="center" class="pl-[40px] pb-[20px] pr-[40px] font-normal text-[16px] leading-[100%] tracking-[0%] text-center text-[#444444]">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.<sup>2</sup>          
+          </td>
+        </tr>
+      </table>
+    </td>
   </tr>
 </table>
