created bottom footer section with logo

--- a/src/components/sections/section-03.html
+++ b/src/components/sections/section-03.html
@@ -15,7 +15,7 @@
         </tr>
         <tr>
           <td align="center" class="pl-[40px] pb-[20px] pr-[40px] font-normal text-[16px] leading-[100%] tracking-[0%] text-center text-[#444444]">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.<sup>1</sup>          
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.<sup class="text-[#444444]">1</sup>          
           </td>
         </tr>
       </table>
@@ -33,7 +33,7 @@
         </tr>
         <tr>
           <td align="center" class="pl-[40px] pb-[20px] pr-[40px] font-normal text-[16px] leading-[100%] tracking-[0%] text-center text-[#444444]">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.<sup>2</sup>          
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.<sup class="text-[#444444]">2</sup>          
           </td>
         </tr>
       </table>
