--- a/src/components/sections/section-04.html
+++ b/src/components/sections/section-04.html
@@ -1,5 +1,81 @@
 <table class="w-full">
   <tr>
-    <td>section-04</td>
+    <td class="pb-[20px] pr-[20px] pl-[20px] pt-[30px] font-normal text-[12px] leading-[100%] tracking-[0%] text-left text-[#000000]">
+      <table>
+        <tr>
+          <td align="center" class="pb-[20px] font-bold text-[12px] leading-[100%] tracking-[0%] text-left text-[#000000]">
+            Ut enim ad minim:
+          </td>
+        </tr>
+        <tr>
+          <td align="center" class="pb-[20px] font-normal text-[12px] leading-[100%] tracking-[0%] text-left text-[#000000]">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </td>
+        </tr>
+        <tr>
+          <td align="center" class="pb-[30px] font-normal text-[12px] leading-[100%] tracking-[0%] text-left text-[#000000]">
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          </td>
+        </tr>
+        <tr>
+          <td align="center" class="pb-[20px] font-bold text-[12px] leading-[100%] tracking-[0%] text-left text-[#000000]">
+            Sint occaecat cupidatat:
+          </td>
+        </tr>
+        <!-- ---------------------- -->
+
+        <tr>
+          <td align="left">
+            <table width="w-full">
+              <tbody><tr>
+                <td align="left" width="20" valign="top" class="pb-[20px] font-normal text-[12px] leading-[100%] tracking-[0%] text-left text-[#000000]">
+                  <span>1.</span>
+                </td>
+                <td align="left" valign="top">
+                  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+                </td>
+              </tr>
+              <tr>
+                <td align="left" width="20" valign="top" class="pb-[20px] font-normal text-[12px] leading-[100%] tracking-[0%] text-left text-[#000000]">
+                  <span>2.</span>
+                </td>
+                <td align="left" valign="top">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+
+
+                </td>
+              </tr>
+              
+              
+            </tbody></table>
+          </td>
+        </tr>
+
+        <tr>
+          <td class="bg-black height-[1px] leading-[15%]">
+            &nbsp;
+          </td>
+        </tr>
+
+
+        <tr>
+          <td align="center" class="pb-[20px] pt-[20px] font-normal text-[12px] leading-[100%] tracking-[0%] text-center text-[#000000]">
+            Sed do eiusmod tempor incididunt ut labore
+          </td>
+        </tr>
+
+        <tr>
+          <td align="center" class="pb-[20px] font-normal text-[12px] leading-[100%] tracking-[0%] text-center text-[#000000]">
+            <x-image class="w-[100px] h-[40px] " imgUrl="image-4.jpeg" href="#"  />
+          </td>
+        </tr>
+        
+        
+      </table>
+      
+    </td>
   </tr>
+  
+
 </table>
